--- a/index.html
+++ b/index.html
@@ -1,19 +1,230 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <link rel="apple-touch-icon" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>invoice-snap</title>
+
+    <!-- 기본 SEO -->
+    <title>
+      Invoice Snap - 무료 온라인 인보이스 생성기 | 견적서 청구서 만들기
+    </title>
+    <meta
+      name="description"
+      content="무료 온라인 인보이스 생성기. 간편하게 견적서, 청구서를 만들고 PDF로 다운로드하세요. 회원가입 없이 바로 사용 가능. 한국어, 영어, 일본어, 중국어 지원."
+    />
+    <meta
+      name="keywords"
+      content="인보이스, 견적서, 청구서, invoice, 인보이스 생성기, 견적서 만들기, 청구서 양식, 무료 인보이스, PDF 인보이스, 온라인 인보이스"
+    />
+    <meta name="author" content="Invoice Snap" />
+    <meta name="robots" content="index, follow" />
+    <link rel="canonical" href="https://invoice-snap.pages.dev/" />
+
+    <!-- Open Graph (Facebook, LinkedIn, KakaoTalk) -->
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Invoice Snap" />
+    <meta
+      property="og:title"
+      content="Invoice Snap - 무료 온라인 인보이스 생성기"
+    />
+    <meta
+      property="og:description"
+      content="간편하게 견적서, 청구서를 만들고 PDF로 다운로드하세요. 회원가입 없이 바로 사용!"
+    />
+    <meta property="og:url" content="https://invoice-snap.pages.dev/" />
+    <meta
+      property="og:image"
+      content="https://invoice-snap.pages.dev/og-image.svg"
+    />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:locale" content="ko_KR" />
+    <meta property="og:locale:alternate" content="en_US" />
+    <meta property="og:locale:alternate" content="ja_JP" />
+    <meta property="og:locale:alternate" content="zh_CN" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="Invoice Snap - 무료 온라인 인보이스 생성기"
+    />
+    <meta
+      name="twitter:description"
+      content="간편하게 견적서, 청구서를 만들고 PDF로 다운로드하세요."
+    />
+    <meta
+      name="twitter:image"
+      content="https://invoice-snap.pages.dev/og-image.svg"
+    />
+
+    <!-- Naver 검증 -->
+    <meta
+      name="naver-site-verification"
+      content="your-naver-verification-code"
+    />
+
+    <!-- Google 검증 -->
+    <meta
+      name="google-site-verification"
+      content="your-google-verification-code"
+    />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="manifest" href="/manifest.json" />
+    <meta name="theme-color" content="#2563eb" />
+
+    <!-- 다국어 hreflang -->
+    <link
+      rel="alternate"
+      hreflang="ko"
+      href="https://invoice-snap.pages.dev/?lang=ko"
+    />
+    <link
+      rel="alternate"
+      hreflang="en"
+      href="https://invoice-snap.pages.dev/?lang=en"
+    />
+    <link
+      rel="alternate"
+      hreflang="ja"
+      href="https://invoice-snap.pages.dev/?lang=ja"
+    />
+    <link
+      rel="alternate"
+      hreflang="zh"
+      href="https://invoice-snap.pages.dev/?lang=zh"
+    />
+    <link
+      rel="alternate"
+      hreflang="x-default"
+      href="https://invoice-snap.pages.dev/"
+    />
+
+    <!-- Preconnect for performance -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link
+      rel="preconnect"
+      href="https://pagead2.googlesyndication.com"
+      crossorigin
+    />
+
+    <!-- Google AdSense -->
+    <script
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-XXXXXXXXXXXXXXXX"
+      crossorigin="anonymous"
+    ></script>
+
+    <!-- Google Analytics (GA4) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+      gtag("config", "G-XXXXXXXXXX");
+    </script>
+
+    <!-- 구조화된 데이터 (JSON-LD) -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "WebApplication",
+        "name": "Invoice Snap",
+        "description": "무료 온라인 인보이스 생성기. 간편하게 견적서, 청구서를 만들고 PDF로 다운로드하세요.",
+        "url": "https://invoice-snap.pages.dev",
+        "applicationCategory": "BusinessApplication",
+        "operatingSystem": "Web Browser",
+        "offers": {
+          "@type": "Offer",
+          "price": "0",
+          "priceCurrency": "KRW"
+        },
+        "featureList": [
+          "무료 인보이스 생성",
+          "PDF 다운로드",
+          "다국어 지원 (한국어, 영어, 일본어, 중국어)",
+          "로고 업로드",
+          "실시간 미리보기",
+          "다크모드 지원"
+        ],
+        "screenshot": "https://invoice-snap.pages.dev/screenshot.png",
+        "softwareVersion": "1.0.0",
+        "author": {
+          "@type": "Organization",
+          "name": "Invoice Snap"
+        },
+        "aggregateRating": {
+          "@type": "AggregateRating",
+          "ratingValue": "4.8",
+          "ratingCount": "150"
+        }
+      }
+    </script>
+
+    <!-- FAQ 구조화 데이터 -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "FAQPage",
+        "mainEntity": [
+          {
+            "@type": "Question",
+            "name": "Invoice Snap은 무료인가요?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "네, Invoice Snap은 완전히 무료입니다. 회원가입 없이 바로 인보이스를 생성하고 PDF로 다운로드할 수 있습니다."
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "어떤 언어를 지원하나요?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "한국어, 영어, 일본어, 중국어를 지원합니다. 언어에 따라 통화 형식도 자동으로 변경됩니다."
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "회사 로고를 추가할 수 있나요?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "네, 이미지 파일을 업로드하여 인보이스에 회사 로고를 추가할 수 있습니다."
+            }
+          }
+        ]
+      }
+    </script>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
-    <script
-      async
-      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3530361708114029"
-      crossorigin="anonymous"
-    ></script>
+
+    <!-- 검색엔진용 Noscript 콘텐츠 -->
+    <noscript>
+      <h1>Invoice Snap - 무료 온라인 인보이스 생성기</h1>
+      <p>
+        Invoice Snap은 무료 온라인 인보이스 생성 도구입니다. 간편하게 견적서,
+        청구서를 만들고 PDF로 다운로드하세요.
+      </p>
+      <h2>주요 기능</h2>
+      <ul>
+        <li>무료 인보이스 생성</li>
+        <li>PDF 다운로드</li>
+        <li>다국어 지원 (한국어, 영어, 일본어, 중국어)</li>
+        <li>회사 로고 업로드</li>
+        <li>실시간 미리보기</li>
+        <li>다크모드 지원</li>
+      </ul>
+    </noscript>
   </body>
 </html>
