--- a/index.html
+++ b/index.html
@@ -61,13 +61,13 @@
     <!-- Naver 검증 -->
     <meta
       name="naver-site-verification"
-      content="your-naver-verification-code"
+      content="42a4073ff744fbe393f4d1e3c297d72ae7d42886"
     />
 
     <!-- Google 검증 -->
     <meta
       name="google-site-verification"
-      content="your-google-verification-code"
+      content="google64407e6e7917f6cd.html"
     />
 
     <!-- Favicon -->
