--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <!-- Google 검증 -->
     <meta
       name="google-site-verification"
-      content="google64407e6e7917f6cd.html"
+      content="MEYWTA4qo50y--vjJ6r7cFBWyz2OT0y3o0zlJhr8mtE"
     />
 
     <!-- Favicon -->
